# AI_and_ML_by_example

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
by_domain/finance/: requirements.txt  transactions_anomaly_detection_IsolationTree.py
by_domain/finance/llm/: __init__.py
model/: __init__.py
