[project]
name = "ai-and-ml-by-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "instructor>=1.13.0",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
]
